# open-media-server

./: .gitignore  Cargo.toml  README.md  test-config.json
examples/: config.yaml
src/: main.rs
src/config/: config.rs
src/media_config/: config.rs  episode.rs  mod.rs  season.rs  show.rs
src/metadata/: tmdb.rs
src/structure/: mod.rs  parser.rs  s3.rs
test-parser/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
test-parser/src/: index.ts
