[package]
name = "open-media-server"
version = "0.1.0"
authors = ["Gašper Dobrovoljc <gasper@aerio.tech>"]
edition = "2021"

[dependencies]
config = { version = "0.13.2", features = ["yaml"] }
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1.6.0"
rust-s3 = "0.32.3"
serde = "1.0.144"
serde_json = "1.0.85"
tmdb_client = "1.6.0"
tokio = {version = "1.20.1", features = ["full"]}
torrent-name-parser = "0.11.0"
